--- a/res/xml/statusbar.xml
+++ b/res/xml/statusbar.xml
@@ -88,6 +88,14 @@
         android:entryValues="@array/vowifi_icon_values"
         android:summary="%s"
         android:defaultValue="0"/>
+
+    <com.android.settings.custom.preference.SystemSettingListPreference
+         	android:key="vowifi_icon_style"
+         	android:title="@string/vowifi_icon_style_title"
+         	android:entries="@array/vowifi_icon_style_entries"
+         	android:entryValues="@array/vowifi_icon_style_values"
+         	android:summary="%s"
+         	android:defaultValue="0"/>
     
     </PreferenceCategory>
 
